add: home && login page

--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My first Project</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>UCP-Correlatives</title>
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
-    <header class="">
-        <nav class="nav-container padding-[0.5rem]">
-            <div>logo</div>
-            <ul class="gap-[2rem]">
-                <li class="cursor-pointer"><a href=""></a>Home</li>
-                <li><a href=""></a>About Us</li>
-                <li><a href=""></a>Matecito</li>
-                <li><a href=""></a>Contact</li>
-            </ul>
-        </nav>
-    </header>
-    <script src="styleParser.js"></script>
+    <header id="inner-nav"></header>
+    <section id="inner-sections"></section>
+    <footer></footer>
+    <script src="js/styleParser.js"></script>
+    <script src="js/innerComponents.js"></script>
   </body>
 </html>
