ADD: dinamics routes whitout finish

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
-    <header id="inner-nav"></header>
+    <header id="navbar"></header>
     <section id="inner-sections"></section>
     <footer></footer>
-    <script src="js/styleParser.js"></script>
-    <script src="js/innerComponents.js"></script>
+    <script src="js/router.js"></script>
   </body>
 </html>
