style: finish home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header id="navbar"></header>
-    <section id="inner-sections"></section>
+    <main id="inner-sections"></main>
     <footer></footer>
     <script src="js/router.js"></script>
   </body>
