refactor styles: navbar and login page, fix: btn redirdect to loginpage from home page NOT FIX

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -25,8 +25,8 @@
           type="text"
           placeholder="Ingrese su DNI"
         />
-        <button class="btn-submit" type="submit" onclick="router(event)">
-          Iniciar Sesión
+        <button class="btn-submit" type="submit">
+          <a href="/login" onclick="router(event)" >Iniciar Sesión</a>
         </button>
       </div>
     </form>
