--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -1,29 +1,35 @@
-<article class="home-container">
-  <div class="hero">
-    <h1 class="title">Iniciar Sesión</h1>
-    <form class="login-form" action="post">
-      <div class="inputs-container">
-          <input
-          class="input"
-          required
-          type="email"
-          autocomplete="on"
-          placeholder="Ingrese su Correo"
-        />
+<section class="login-container">
+  <div class="layout-content">
+    <h3 class="login-title">Iniciar sesión</h3>
+
+    <form class="login-form" action="/login" method="POST">
+      <div class="form-group">
+        <label for="dni">Número de Documento</label>
         <input
-          class="input"
+          id="dni"
+          name="dni"
+          type="text"
+          placeholder="Escribe tu número de dni"
           required
-          type="password"
-          autocomplete="on"
-          placeholder="Ingrese su Contraseña"
         />
       </div>
-      <div class="links">
-        <a class="link" href="">Recuperar Contraseña</a>
-        <a class="link" href="">Registrarse</a>
+
+      <div class="form-group">
+        <label for="password">Contraseña</label>
+        <input
+          id="password"
+          name="password"
+          type="password"
+          placeholder="Escribe tu contraseña"
+          required
+        />
       </div>
-      <button class="btn" type="submit">Ingresar</button>
+
+      <button type="submit" class="login-button">Iniciar sesión</button>
     </form>
+
+    <p class="forgot-password">
+      <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
+    </p>
   </div>
-</article>
-<base href="/">
+</section>
