--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -1,35 +1,48 @@
-<section class="login-container">
-  <div class="layout-content">
-    <h3 class="login-title">Iniciar sesión</h3>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Iniciar Sesión</title>
+    <link rel="stylesheet" href="../../styles/index.css" />
+  </head>
+  <body>
+    <section class="login-container">
+      <div class="layout-content">
+        <h3 class="login-title">Iniciar sesión</h3>
 
-    <form class="login-form" action="/login" method="POST">
-      <div class="form-group">
-        <label for="dni">Número de Documento</label>
-        <input
-          id="dni"
-          name="dni"
-          type="text"
-          placeholder="Escribe tu número de dni"
-          required
-        />
+        <form class="login-form" action="/login" method="POST">
+          <div class="form-group">
+            <label for="dni">Número de Documento</label>
+            <input
+              id="dni"
+              name="dni"
+              type="text"
+              placeholder="Escribe tu número de dni"
+              required
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="password">Contraseña</label>
+            <input
+              id="password"
+              name="password"
+              type="password"
+              placeholder="Escribe tu contraseña"
+              required
+            />
+          </div>
+
+          <button type="submit" class="login-button">Iniciar sesión</button>
+        </form>
+
+        <p class="forgot-password">
+          <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
+          <a href="/forgot-password">¿Sos nuevo? Registrate</a>
+        </p>
       </div>
-
-      <div class="form-group">
-        <label for="password">Contraseña</label>
-        <input
-          id="password"
-          name="password"
-          type="password"
-          placeholder="Escribe tu contraseña"
-          required
-        />
-      </div>
-
-      <button type="submit" class="login-button">Iniciar sesión</button>
-    </form>
-
-    <p class="forgot-password">
-      <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
-    </p>
-  </div>
-</section>
+    </section>
+  </body>
+  <script src="./req.js"></script>
+</html>
